--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 id="result"></h1>
     <script>
       var r = "Hello Sabir";
-      let result = r;
+      let result = r.charAt(0);
       document.getElementById("result").innerHTML = result;
     </script>
   </body>
