--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
     <h1 id="result"></h1>
     <script>
-      var r = "Hello Sabir";
-      let result = r.charAt(0);
+      var r = "HellSabior";
+      let result = r.includes(" ");
       document.getElementById("result").innerHTML = result;
     </script>
   </body>
