--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <body>
     <h1 id="result"></h1>
     <script>
-      var r = "Hell-Sabior";
-      let result = r.replaceAll("-", "space");
+      let result = ;
       document.getElementById("result").innerHTML = result;
     </script>
   </body>
