--- a/index.html
+++ b/index.html
@@ -13,24 +13,6 @@
   </head>
   <body>
     <p id="r"></p>
-    <script>
-      let x = "";
-      const myObj = {
-        name: "John",
-        age: 30,
-        cars: [
-          { name: "Ford", models: ["Fiesta", "Focus", "Mustang"] },
-          { name: "BMW", models: ["320", "X3", "X5"] },
-          { name: "Fiat", models: ["500", "Panda"] },
-        ],
-      };
-      for (let i in myObj.cars) {
-        x += "<h2>" + myObj.cars[i].name + "</h2>";
-        for (let m in myObj.cars[i].models) {
-          x += myObj.cars[i].models[m] + "<br>";
-        }
-      }
-      document.getElementById("r").innerHTML = x;
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
